<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="200dp"
    android:layout_marginTop="10dp"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg_item"
        android:layout_gravity="bottom"
        />

    <ImageView
        android:id="@+id/imvResourceImageItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sun_cloud_rain"
        android:layout_gravity="end"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom|left"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:id="@+id/tvTemValueItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_25_8451"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            />
        <TextView
            android:id="@+id/tvLowHeightTemItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_20_l_10"
            android:textColor="@color/gray"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/tvLocationItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ha_noi_vietnam"
            android:textColor="@color/white"
            android:textSize="20sp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tvStatusWeatherItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cloudy"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="40dp"/>

</FrameLayout>